--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="zh-cn">
+<html lang="zh-cn" theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue</title>
+    <script type="text/javascript" src="/configs/domainConfig.js"></script>
+    <script type="text/javascript" src="/configs/mapConfig.js"></script>
+    <script type="text/javascript" src="/configs/systemConfig.js"></script>
   </head>
   <body>
     <div id="app"></div>
